--- a/src/main.css
+++ b/src/main.css
@@ -36,7 +36,7 @@ button {
   border: 0;
   color: #fff;
   font-size: 16px;
-  transition: background-color 200ms ease;
+  transition: background-color 100ms ease;
   outline: none;
   cursor: pointer;
   font-weight: 700;
@@ -67,6 +67,7 @@ button.active {
   background-color: #444444ad;
   width: 75vw;
   margin-bottom: 5vh;
+
 }
 
 .error-container {
@@ -121,7 +122,7 @@ button.active {
   width: 45%;
   margin: 1%;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.2s all;
+  transition: 100ms all;
 }
 
 .habit-actions {
@@ -156,4 +157,23 @@ button.active {
   flex-flow: row nowrap;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.day-container {
+  font-size: 1.2em;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.day-selector-button {
+  background: transparent;
+}
+
+.day-selector-button:hover,
+.day-selector-button:focus,
+.day-selector-button.active {
+  background-color: transparent;
 }
