--- a/src/main.css
+++ b/src/main.css
@@ -66,7 +66,6 @@ button.active {
   box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.5);
   background-color: #444444ad;
   width: 75vw;
-  margin-bottom: 5vh;
 }
 
 .error-container {
@@ -158,14 +157,13 @@ button.active {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  position: absolute;
+  justify-content: center;
   bottom: 0;
-  margin: auto;
-  left: 0;
-  right: 0;
-  padding: 10px 20px;
-  background: #444444ad;
+  padding: 25px 20px;
+}
+
+.footer svg {
+  flex:1;
 }
 
 .cancel {
@@ -202,7 +200,7 @@ button.active {
   letter-spacing: 10px;
   font-variant-caps: all-petite-caps;
   position: absolute;
-  top:0;
+  top:2%;
   text-align: center;
 }
 
